cluster/apps/monitoring/fluent-bit/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fluent-bit
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
